objects/Tracked_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email,</fullName>
                    <default>true</default>
                    <label>Email,</label>
                </value>
                <value>
                    <fullName>Platform Event</fullName>
                </value>
                <value>
                    <fullName>Slack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Tracked Field</label>
    <pluralLabel>Tracked Fields</pluralLabel>
</CustomObject>